reference pubKey added + some design changes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,9 +108,20 @@
   margin-left: 0.5rem;
 }
 
+.loader{
+  height: 500px;
+  width: 500px;
+  margin: 100px;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .loader{
+    height: 200px;
+    width: 200px;
+    margin: 100px;
   }
 }
