--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,7 +42,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2.5rem;
 }
 
 .title,
@@ -51,15 +51,28 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 3rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+}
+.des {
+  margin: 1.5rem 0;
+  line-height: 1.5;
+  font-size: 1.2rem;
+}
+.des a{
+  color: #0070f3;
+  text-decoration: none;
+}
+.description a {
+  color: #0070f3;
+  text-decoration: none;
 }
 
 .code {
   background: #fafafa;
   border-radius: 5px;
-  padding: 0.75rem;
+  padding: 0.3rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
